tests/compile_fail/pipeline_stage_key_zero_stage_oob.cpp
#include <pb/pipeline.hpp>

struct Raw {};

using Pipeline = pb::from<Raw>::to<Raw>;

// Should fail because public stage key/name helpers require an in-range stage index.
static_assert(pb::stage_key<Pipeline, 0>() == "bad");

int main() { return 0; }
